<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.igniterealtime.smack</groupId>
    <artifactId>smack-sint-server-extensions</artifactId>
    <version>1.5.1-SNAPSHOT</version>

    <name>Server Extensions for Smack's Integration Test Framework</name>
    <description>Additional tests defined in Smack's Integration Test Framework that are server-oriented.</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <smack.version>4.5.0-beta3</smack.version>
    </properties>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>org.igniterealtime.smack.inttest.SmackIntegrationTestFramework</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.2.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>org.igniterealtime.smack.inttest.SmackIntegrationTestFramework</mainClass>
                    <systemProperties>
                        <systemProperty>
                            <key>sinttest.service</key>
                            <value>example.org</value>
                        </systemProperty>
                        <systemProperty>
                            <key>sinttest.adminAccountUsername</key>
                            <value>admin</value>
                        </systemProperty>
                        <systemProperty>
                            <key>sinttest.adminAccountPassword</key>
                            <value>admin</value>
                        </systemProperty>
                        <systemProperty>
                            <key>sinttest.securityMode</key>
                            <value>disabled</value>
                        </systemProperty>
                    </systemProperties>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.igniterealtime.smack</groupId>
            <artifactId>smack-integration-test</artifactId>
            <version>${smack.version}</version>
        </dependency>
        <dependency>
            <groupId>org.igniterealtime.smack</groupId>
            <artifactId>smack-core</artifactId>
            <version>${smack.version}</version>
        </dependency>
        <dependency>
            <groupId>org.igniterealtime.smack</groupId>
            <artifactId>smack-tcp</artifactId>
            <version>${smack.version}</version>
        </dependency>
        <dependency>
            <groupId>org.igniterealtime.smack</groupId>
            <artifactId>smack-websocket</artifactId>
            <version>${smack.version}</version>
        </dependency>
        <dependency>
            <groupId>org.igniterealtime.smack</groupId>
            <artifactId>smack-im</artifactId>
            <version>${smack.version}</version>
        </dependency>
        <dependency>
            <groupId>org.igniterealtime.smack</groupId>
            <artifactId>smack-extensions</artifactId>
            <version>${smack.version}</version>
        </dependency>
        <dependency>
            <groupId>org.igniterealtime.smack</groupId>
            <artifactId>smack-xmlparser-stax</artifactId>
            <version>${smack.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>5.4.2</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.4.2</version>
        </dependency>
        <dependency>
            <groupId>org.igniterealtime.smack</groupId>
            <artifactId>smack-legacy</artifactId>
            <version>${smack.version}</version>
        </dependency>
        <dependency>
            <groupId>org.dmfs</groupId>
            <artifactId>rfc3986-uri</artifactId>
            <version>0.8.1</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <!-- Used to pull in Smack SNAPSHOT artifacts during development. Remove this after switching to a proper release of Smack. -->
            <id>sonatype-snapshot</id>
            <name>Sonatype Snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <snapshots><enabled>true</enabled></snapshots>
        </repository>
    </repositories>
</project>
